# ftp-proxy

./: *  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  FTP-PROXY introductory material.pptx  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  proxy.cfg  temp
Release/: ftp-proxy-1-01.out  ftp-proxy-1.01.out
ftp-proxy/: CMakeLists.txt  test-proxy
ftp-proxy/include/: client.h  list.h  log.h  option.h  session.h  socket.h  utils.h
ftp-proxy/src/: client.c  log.c  option.c  packet.c  server.c  session.c  socket.c  thread.c  utils.c
test-proxy/: .CMakeLists.txt.swp  .ccls  CMakeLists.txt  Makefile  StdInc.h  build.sh  client.h  cmake_install.cmake  global_variables.c  global_variables.h  log.c  log.h  main.c  main.h  option.c  option.h  proxy.cfg  server.c  server.h  test-proxy  test-proxy.cpp  test-proxy.h
test-proxy/include/: StdInc.h  client.h  global_variables.h  hashmap.h  list.h  log.h  main.h  option.h  packet.h  proxy.h  server.h  session.h  socket.h  thread.h  types.h  utils.h  vector.h
test-proxy/src/: client.c  hashmap.c  log.c  main.c  option.c  packet.c  server.c  session.c  socket.c  thread.c  utils.c  vector.c
